--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,10 +1,14 @@
 model_list:
-  - model_name: "*"
+  - model_name: azure-ai-mistral
     litellm_params:
-      model: "openai/*"
-  - model_name: claude-3-5-sonnet-20240620
+      api_base: os.environ/AZURE_AI_MISTRAL_API_BASE
+      api_key: os.environ/AZURE_AI_MISTRAL_API_KEY
+      model: azure_ai/Mistral-large-nmefg
+  - model_name: azure-ai-phi
     litellm_params:
-      model: gpt-3.5-turbo
+      api_base: os.environ/AZURE_AI_PHI_API_BASE
+      api_key: os.environ/AZURE_AI_PHI_API_KEY
+      model: azure_ai/Phi-3-medium-128k-instruct-fpmvj
 
 
 general_settings:
