--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -4,6 +4,9 @@ model_list:
       model: openai/fake
       api_key: fake-key
       api_base: https://exampleopenaiendpoint-production.up.railway.app/
+  - model_name: gemini-flash
+    litellm_params:
+      model: gemini/gemini-1.5-flash
 
 general_settings: 
   master_key: sk-1234 
