build(model_prices_and_context_window.json): add azure ai jamba instruct pricing + token details
Adds jamba instruct, mistral, llama3 pricing + token info for azure_ai

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -4,15 +4,21 @@ model_list:
       api_base: os.environ/AZURE_AI_MISTRAL_API_BASE
       api_key: os.environ/AZURE_AI_MISTRAL_API_KEY
       model: azure_ai/Mistral-large-nmefg
+      input_cost_per_token: 0.00001
+      output_cost_per_token: 0.000004
   - model_name: azure-ai-phi
     litellm_params:
       api_base: os.environ/AZURE_AI_PHI_API_BASE
       api_key: os.environ/AZURE_AI_PHI_API_KEY
       model: azure_ai/Phi-3-medium-128k-instruct-fpmvj
+  - model_name: azure-ai-jamba-instruct
+    litellm_params:
+      api_base: "https://AI21-Jamba-Instruct-jpddv.eastus2.models.ai.azure.com"
+      api_key: "WJkvJneEcBMhFqK8zZBaAVw9cl4Ec5Pb"
+      model: azure_ai/jamba-instruct
 
 
 general_settings:
-  alerting: ["slack"]
   alerting_threshold: 10
   master_key: sk-1234
   pass_through_endpoints:
