--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -17,6 +17,7 @@ model_list:
 
 general_settings: 
   master_key: sk-1234 
+  litellm_key_header_name: "X-Litellm-Key"
 
 litellm_settings:
   cache: true
