fix(utils.py): return optional params from groq

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,4 +1,5 @@
 model_list:
-  - model_name: ollama-mistral
+  - model_name: groq-whisper
     litellm_params:
-      model: ollama/mistral
+      model: groq/whisper-large-v3
+      
