feat(aporio_ai.py): support aporio ai prompt injection for chat completion requests
Closes https://github.com/BerriAI/litellm/issues/2950

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,5 +1,10 @@
 model_list:
-  - model_name: groq-whisper
+  - model_name: "*"
     litellm_params:
-      model: groq/whisper-large-v3
-      
+      model: openai/*
+
+litellm_settings:
+  guardrails:
+    - prompt_injection:
+        callbacks: ["aporio_prompt_injection"]
+        default_on: true
