fix(router.py): check for request_timeout in acompletion
support 'request_timeout' param in router acompletion

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,5 +1,5 @@
 model_list:
-  - model_name: groq-whisper
+  - model_name: llama-3
     litellm_params:
-      model: groq/whisper-large-v3
-      
+      model: gpt-4
+      request_timeout: 1
