--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -4,14 +4,14 @@ model_list:
       model: openai/fake
       api_key: fake-key
       api_base: https://exampleopenaiendpoint-production.up.railway.app/
-      tags: ["free"]
+      tags: ["free"] # 👈 Key Change
   - model_name: gpt-4
     litellm_params:
       model: openai/gpt-4o
       api_key: os.environ/OPENAI_API_KEY
-      tags: ["paid"]
+      tags: ["paid"] # 👈 Key Change
 
+router_settings:
+  enable_tag_filtering: True # 👈 Key Change
 general_settings: 
-  master_key: sk-1234 
-
-
+  master_key: sk-1234
