fix(user_api_key_auth.py): update valid token cache with updated team object cache

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,5 +1,6 @@
 model_list:
-  - model_name: bad-azure-model
+  - model_name: azure-chatgpt
     litellm_params:
-      model: gpt-4
-      request_timeout: 1
+      model: azure/chatgpt-v-2
+      api_key: os.environ/AZURE_API_KEY
+      api_base: os.environ/AZURE_API_BASE
