fix(openai.py): drop invalid params if `drop_params: true` for azure ai
Fixes https://github.com/BerriAI/litellm/issues/4800

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,6 +1,9 @@
 model_list:
-  - model_name: azure-chatgpt
+  - model_name: azure-mistral
     litellm_params:
-      model: azure/chatgpt-v-2
-      api_key: os.environ/AZURE_API_KEY
-      api_base: os.environ/AZURE_API_BASE
+      model: azure_ai/mistral
+      api_key: os.environ/AZURE_AI_MISTRAL_API_KEY
+      api_base: os.environ/AZURE_AI_MISTRAL_API_BASE
+
+litellm_settings:
+  drop_params: true
