--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -3,3 +3,7 @@ model_list:
     litellm_params:
       model: groq/llama3-groq-70b-8192-tool-use-preview
       api_key: os.environ/GROQ_API_KEY
+
+
+litellm_settings:
+  callbacks: ["braintrust"]
