fix(anthropic.py): support openai system message being a list

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,8 +1,7 @@
 model_list:
-  - model_name: groq-llama3
+  - model_name: anthropic-claude
     litellm_params:
-      model: groq/llama3-groq-70b-8192-tool-use-preview
-      api_key: os.environ/GROQ_API_KEY
+      model: claude-3-haiku-20240307
 
 litellm_settings:
   callbacks: ["logfire"]
