--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -4,5 +4,6 @@ model_list:
       model: "openai/*"           # passes our validation check that a real provider is given
       api_key: "" 
 
-general_settings:
-  completion_model: "gpt-3.5-turbo"
+litellm_settings:
+  cache: True
+  
