--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,9 +1,4 @@
 model_list:
-  - model_name: "*"             # all requests where model not in your config go to this deployment
+  - model_name: "test-model"             
     litellm_params:
-      model: "openai/*"           # passes our validation check that a real provider is given
-      api_key: "" 
-
-litellm_settings:
-  cache: True
-  
+      model: "openai/gpt-3.5-turbo-instruct-0914"
