--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,4 +1,4 @@
 model_list:
   - model_name: "test-model"             
     litellm_params:
-      model: "openai/gpt-3.5-turbo-instruct-0914"
+      model: "openai/text-embedding-ada-002"
