--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -11,6 +11,10 @@ model_list:
   - model_name: "*"
     litellm_params:
       model: "*"
+  - model_name: "*"
+    litellm_params:
+      model: openai/*
+      api_key: os.environ/OPENAI_API_KEY
 general_settings: 
   master_key: sk-1234
   alerting: ["slack"]
