--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,11 +1,4 @@
 model_list:
-  - model_name: "test-model"             
+  - model_name: "gpt-3.5-turbo"             
     litellm_params:
-      model: "openai/text-embedding-ada-002"
-  - model_name: "my-custom-model"
-    litellm_params:
-      model: "my-custom-llm/my-model"
-
-litellm_settings:
-  custom_provider_map:
-  - {"provider": "my-custom-llm", "custom_handler": custom_handler.my_custom_llm}
+      model: "openai/gpt-3.5-turbo"
