vault changes for litellm

--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,5 @@ tenacity==8.2.3  # for retrying requests, when litellm.num_retries set
 pydantic==2.7.1 # proxy + openai req.
 jsonschema==4.22.0 # validating json schema
 ####
+
+hvac==2.3.0
