--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -1,4 +1,4 @@
 model_list:
-  - model_name: "gpt-3.5-turbo"             
+  - model_name: "*"             
     litellm_params:
-      model: "openai/gpt-3.5-turbo"
+      model: "*"
