fix(utils.py): fix cache hits for streaming
Fixes https://github.com/BerriAI/litellm/issues/4109

--- a/litellm/proxy/_new_secret_config.yaml
+++ b/litellm/proxy/_new_secret_config.yaml
@@ -2,3 +2,7 @@ model_list:
   - model_name: "*"             
     litellm_params:
       model: "*"
+
+litellm_settings:
+  success_callback: ["logfire"]
+  cache: true
